# llama-router

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: project.mdc  python-standards.mdc
.github/workflows/: ci.yml
src/llama_router/: __init__.py  __main__.py  config.py  database.py  llamacpp_client.py  models.py  ollama_client.py  provider_manager.py  request_logger.py  router.py  v1_client.py
src/llama_router/api/: app.py  chat.py  deps.py  embeddings.py  tags.py
src/llama_router/dashboard/: app.py  deps.py  routes.py
src/llama_router/llamacpp_api/: app.py  audio.py  chat.py  completions.py  deps.py  embeddings.py  images.py  models.py  responses.py
src/llama_router/registry_cache/: app.py  cache.py
src/llama_router/templates/: base.html  dashboard.html  provider_detail.html
tests/: conftest.py  test_database.py  test_router.py
