[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-router"
version = "0.5.2"
description = "An Ollama router that aggregates multiple Ollama backends behind a single API"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "aiosqlite",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "black",
    "httpx",
]

[project.scripts]
llama-router = "llama_router.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
